tests/errors/loop_test.f90
program loop_test
    integer :: i
    do i=1,3
       i = i + 1
       print*,i
    end do
end program